--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "npm run dev"
   },
   "author": "liufangyan02",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LFY836126/remove-console.git"
+  }
 }
